Fixed mobile glitches for the new pages:
- fixed border not showing on selected sub-tabs
- fixed reseller-products expander text overlapping
- fixed reseller-clients text overlapping
- fixed ticket-add-step1 mobile grid
- fixed .count numbers positioning within a circle

--- a/_sass/layout/_plate.scss
+++ b/_sass/layout/_plate.scss
@@ -456,6 +456,7 @@
 			opacity: 1;
 			text-align: center;
 			width: 1.5em;
+			line-height: 1.7;
 	    }
 	}
 
@@ -689,6 +690,10 @@
 			            height: 3px;
 			            left: 0;
 			            bottom: -1px;
+
+			            @media screen and (max-width: $medium-screen) { 
+							bottom: 2px;
+						}
 			        }
 
 			        &:hover { background: transparent; }
